Esercizi/ES03/kube-deployment-loadbalancer.yaml
# OpenShift  version: 4.20.15
# Kubernetes version: v1.33.6
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-leo-app
  namespace: prj-antonio-minelli
  labels:
    app: leo-app
    env: prod
  annotations:
    description: "Deployment per eseguire l'applicazione demo"
    owner: "Antonio Minelli"
    build-version: "1.0.0"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: leo-app
      env: prod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1 # Max 1 pod non disponibile durante l'aggiornamento
      maxSurge: 1       # Max 1 pod in più durante l'aggiornamento
  # modello del pod
  template:
    metadata:
      name: pod-leo-app
      labels:
        app: leo-app
        env: prod
    spec:
      containers:
      - name: cnt-leo-app
        image: aminelli/webapp-leo:v1.0
        ports:
        - containerPort: 8080
          protocol: TCP
        # Iniziezioni variabili di ambiente per configurazione profili Spring e opzioni JVM
        resources:
          requests:
            cpu: "100m"
            memory: "512Mi"
          limits:
            cpu: "1024m"
            memory: "1024Mi"
        # Configurazione health check per monitoraggio stato applicazione
        # StartupProbe: verifica se l'applicazione è avviata correttamente
        startupProbe:
          httpGet: 
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 5
        # LivenessProbe: verifica se l'applicazione è in salute durante l'esecuzione
        # Se health check fallisce, Kubernetes riavvierà il pod per tentare di risolvere il problema
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 60
          failureThreshold: 3
        # ReadinessProbe: verifica se l'applicazione è pronta a ricevere traffico
        # Se health check fallisce, Kubernetes rimuoverà il pod dal servizio fino a quando non sarà di nuovo pronto
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 3
      # Terminazione graceful con 60 secondi per consentire all'applicazione di chiudersi correttamente
      terminationGracePeriodSeconds: 60

---
# Service per esporre l'applicazione demo all'interno del cluster
apiVersion: v1
kind: Service
metadata:
  name: svc-leo-app2
  namespace: prj-antonio-minelli
  labels:
    app: leo-app
    env: prod
  annotations:
    description: "Service per esporre l'applicazione demo"
    owner: "Antonio Minelli"
    build-version: "1.0.0"
spec:
  type: LoadBalancer
  selector:
    app: leo-app
    env: prod
  ports:
  - name: http
    protocol: TCP
    port: 80           # Porta del load balancer esterno
    targetPort: 8080   # Porta del pod a cui il service inoltra il traffico 
  - name: https
    protocol: TCP
    port: 443          # Porta del load balancer esterno per HTTPS
    targetPort: 8443   # Porta del pod a cui il service inoltra il traffico
  loadBalancerIP: 192.168.1.1
---
